syntax = "proto3";

option csharp_namespace = "OrderService"; 

package MyPackage;

import "Product Aggregate/GrpcBrand.proto";
import "Product Aggregate/GrpcCategory.proto";

message GrpcProduct {
    int32 Id = 1;
    string Name = 2;
    double Price = 3;
    string PictureUrl = 4;
    GrpcBrand Brand = 5;
    GrpcCategory Category = 6;
}